try fixing mathjax overlap of navbar html_usermanual.css

--- a/docs/html_usermanual.css
+++ b/docs/html_usermanual.css
@@ -5,6 +5,7 @@
 	  position: fixed; /* Set the navbar to fixed position */
 	  top: 0; /* Position the navbar at the top of the page */
 	  width: 100%; /* Full width */
+	  z-index: 9999;
 	}
 
 	/* Links inside the navbar */
@@ -88,6 +89,9 @@
     }
     li > ol, li > ul {
       margin-top: 0;
+    }
+    .mjx-chtml {
+      z-index: 999; /* Set the z-index value of MathJax elements */
     }
     blockquote {
       margin: 1em 0 1em 1.7em;
